# Hardware-Agnostic-Performance-Profiler-HAPP-

./: CMakeLists.txt  README.md
docs/: HAPP_Documentation.md
include/: hardware_profile.h  hardware_profiles.h
include/cli/: cli_parser.h  cli_runner.h  constrained_session.h
include/hardware/: hardware_config.h  storage_type.h
include/profiler/: bottleneck_analyzer.h
include/simulator/: simulation_engine.h  simulation_result.h
include/utils/: config_file.h  virtual_memory.h
include/workload/: workload_spec.h
src/: hardware_profile.cpp  hardware_profiles.cpp  main.cpp
src/cli/: cli_parser.cpp  cli_runner.cpp  constrained_session.cpp
src/hardware/: hardware_config.cpp  storage_type.cpp
src/profiler/: bottleneck_analyzer.cpp
src/simulator/: simulation_engine.cpp  simulation_result.cpp
src/utils/: config_file.cpp  virtual_memory.cpp
src/workload/: workload_spec.cpp
tests/python_workloads/: alloc_hold.py  alloc_stepped_grow.py  cpu_spin.py  many_objects.py
